# v2.0

./: .gitignore  analysis.js  best_zodiac_model.pkl  business.js  config.js  data-query.js  docker-compose.yml  dom.js  event-binder.js  filter.js  index.html  lottery.js  lottery_history.csv  main.js  prediction.js  pyproject.toml  real_lottery_history.csv  render.js  requirements.txt  special-history.js  state-manager.js  storage.js  style.css  toast.js  utils.js  vercel.json  zodiac_model_前80期数据.pkl  zodiac_model_后80期数据.pkl  zodiac_model_完整数据-调整参数.pkl  zodiac_model_完整数据集.pkl
api/: index.py
frontend/: index.html
python/: fetch_real_history.py  train_api_data.py  train_systematic.py  zodiac_ml_predictor.py
